# cpbstats-api/src/main/webapp/api-docs/swagger.json
@@ -9,6 +9,8 @@
     "name" : "Exercices"
   }, {
     "name" : "Authentication"
+  }, {
+    "name" : "User Data"
   } ],
   "schemes" : [ "http", "https" ],
   "paths" : {
@@ -35,7 +37,7 @@
           "200" : {
             "description" : "successful operation",
             "schema" : {
-              "$ref" : "#/definitions/UserGroupApiModel"
+              "$ref" : "#/definitions/UserGroup"
             }
           },
           "403" : {
@@ -73,45 +75,6 @@
         }
       }
     },
-    "/exercices" : {
-      "get" : {
-        "tags" : [ "Exercices" ],
-        "summary" : "Liste des exercices de l'utilisateur authentifié",
-        "description" : "",
-        "operationId" : "getExercices",
-        "responses" : {
-          "200" : {
-            "description" : "successful operation",
-            "schema" : {
-              "type" : "array",
-              "items" : {
-                "type" : "object"
-              }
-            }
-          }
-        }
-      },
-      "post" : {
-        "tags" : [ "Exercices" ],
-        "summary" : "Eregistre un exercice",
-        "description" : "",
-        "operationId" : "addExercices",
-        "parameters" : [ {
-          "in" : "body",
-          "name" : "body",
-          "description" : "Exercice à sauvegarder",
-          "required" : false,
-          "schema" : {
-            "$ref" : "#/definitions/Exercice"
-          }
-        } ],
-        "responses" : {
-          "default" : {
-            "description" : "successful operation"
-          }
-        }
-      }
-    },
     "/exercices/types" : {
       "get" : {
         "tags" : [ "Exercices" ],
@@ -131,9 +94,48 @@
         }
       }
     },
-    "/exercices/{id}" : {
+    "/userData/exercices" : {
+      "get" : {
+        "tags" : [ "User Data" ],
+        "summary" : "Liste des exercices de l'utilisateur authentifié",
+        "description" : "",
+        "operationId" : "getExercices",
+        "responses" : {
+          "200" : {
+            "description" : "successful operation",
+            "schema" : {
+              "type" : "array",
+              "items" : {
+                "type" : "object"
+              }
+            }
+          }
+        }
+      },
+      "post" : {
+        "tags" : [ "User Data" ],
+        "summary" : "Eregistre un exercice",
+        "description" : "",
+        "operationId" : "addExercices",
+        "parameters" : [ {
+          "in" : "body",
+          "name" : "body",
+          "description" : "Exercice à sauvegarder",
+          "required" : false,
+          "schema" : {
+            "$ref" : "#/definitions/Exercice"
+          }
+        } ],
+        "responses" : {
+          "default" : {
+            "description" : "successful operation"
+          }
+        }
+      }
+    },
+    "/userData/exercices/{id}" : {
       "delete" : {
-        "tags" : [ "Exercices" ],
+        "tags" : [ "User Data" ],
         "summary" : "Liste des exercices de l'utilisateur authentifié",
         "description" : "",
         "operationId" : "deleteExercices",
@@ -150,9 +152,106 @@
           }
         }
       }
+    },
+    "/userData/objectifs" : {
+      "get" : {
+        "tags" : [ "User Data" ],
+        "summary" : "Liste des objectifs de l'utilisateur authentifié",
+        "description" : "",
+        "operationId" : "getObjectifs",
+        "responses" : {
+          "200" : {
+            "description" : "successful operation",
+            "schema" : {
+              "type" : "array",
+              "items" : {
+                "type" : "object"
+              }
+            }
+          }
+        }
+      },
+      "post" : {
+        "tags" : [ "User Data" ],
+        "summary" : "Enregistre un objectif",
+        "description" : "",
+        "operationId" : "addObjectif",
+        "parameters" : [ {
+          "in" : "body",
+          "name" : "body",
+          "description" : "Objectif à sauvegarder",
+          "required" : false,
+          "schema" : {
+            "$ref" : "#/definitions/Objectif"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "successful operation",
+            "schema" : {
+              "type" : "integer",
+              "format" : "int32"
+            }
+          }
+        }
+      },
+      "put" : {
+        "tags" : [ "User Data" ],
+        "summary" : "Enregistre un objectif",
+        "description" : "",
+        "operationId" : "updateObjectif",
+        "parameters" : [ {
+          "in" : "body",
+          "name" : "body",
+          "description" : "Objectif à sauvegarder",
+          "required" : false,
+          "schema" : {
+            "$ref" : "#/definitions/Objectif"
+          }
+        } ],
+        "responses" : {
+          "default" : {
+            "description" : "successful operation"
+          }
+        }
+      }
+    },
+    "/userData/types" : {
+      "get" : {
+        "tags" : [ "User Data" ],
+        "summary" : "Liste des types d'exercices",
+        "description" : "",
+        "operationId" : "getTypeExercicesData",
+        "responses" : {
+          "200" : {
+            "description" : "successful operation",
+            "schema" : {
+              "$ref" : "#/definitions/Chart"
+            }
+          }
+        }
+      }
     }
   },
   "definitions" : {
+    "Chart" : {
+      "properties" : {
+        "data" : {
+          "type" : "array",
+          "description" : "Data",
+          "items" : {
+            "type" : "string"
+          }
+        },
+        "labels" : {
+          "type" : "array",
+          "description" : "Labels",
+          "items" : {
+            "type" : "string"
+          }
+        }
+      }
+    },
     "Exercice" : {
       "properties" : {
         "id" : {
@@ -176,7 +275,58 @@
         }
       }
     },
-    "UserGroupApiModel" : {
+    "Objectif" : {
+      "properties" : {
+        "id" : {
+          "type" : "integer",
+          "format" : "int32",
+          "description" : "Identifiant de l'objectif"
+        },
+        "libelle" : {
+          "type" : "string",
+          "description" : "Libelle de l'objectif"
+        },
+        "objectifExercices" : {
+          "type" : "array",
+          "description" : "Liste des exercices à effectuer",
+          "items" : {
+            "$ref" : "#/definitions/ObjectifExercice"
+          }
+        }
+      }
+    },
+    "ObjectifExercice" : {
+      "properties" : {
+        "idTypeExercice" : {
+          "type" : "integer",
+          "format" : "int32",
+          "description" : "Identifiant du type d'exercice"
+        },
+        "libelleTypeExercice" : {
+          "type" : "string",
+          "description" : "Type d'exercice"
+        },
+        "data" : {
+          "type" : "string",
+          "description" : "Donnée"
+        },
+        "date" : {
+          "type" : "string",
+          "description" : "Date"
+        },
+        "recurrentSemaine" : {
+          "type" : "boolean",
+          "description" : "Récurrent toutes les semaines ou non",
+          "default" : false
+        },
+        "recurrentMois" : {
+          "type" : "boolean",
+          "description" : "Récurrent toutes les mois ou non",
+          "default" : false
+        }
+      }
+    },
+    "UserGroup" : {
       "properties" : {
         "username" : {
           "type" : "string"
